<resources>
    <string name="app_name">Image Finder</string>

    <string name="action_settings">Filters</string>
    <string name="pt_searchHint">Enter search key</string>
    <string name="bt_search">Search</string>
    <string name="image_title_label">Image title</string>
    <string name="title_activity_display">Image title</string>
    <string name="tvImageSize">Image Size</string>
    <string name="tvImageType">Image Type</string>
    <string name="filter_dialog_title">Search Filters</string>
    <string name="tvColorFilter">Color</string>
    <string name="tvSiteFilter">Site Filter</string>
    <string name="btSave">Save</string>
    <string name="btCancel">Cancel</string>
    <string name="share">Share</string>
    <string name="network_error">Connection Error!</string>
    <string name="wifi_failure">Unable to connect to WiFi!</string>
    <string name="service_not_available">Site filter invalid, 404 error returned</string>
    <string name="server_unavailable">Unable to contact server host. Server may be rained out or your network connection is faulty!</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="search">Search</string>
</resources>
