<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ImageSearchActivity">
    <item android:id="@+id/filter_settings" android:title="@string/action_settings"
        android:orderInCategory="2" app:showAsAction="always"
        android:icon="@drawable/ic_filter"/>

    <item
        android:id="@+id/menu_item_share"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:drawableRight="@drawable/ic_clear"/>


</menu>
