<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvImageSize"
        android:id="@+id/tvImageSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:textColor="@color/dark_blue"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_above="@+id/tvColorFilter"
        android:layout_alignBaseline="@+id/spImageSize"
        android:singleLine="true"
        android:typeface="monospace"
        android:gravity="left"/>

    <Spinner
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:layout_toEndOf="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:textSize="14sp"
        android:spinnerMode="dropdown"
        android:layout_toRightOf="@+id/tvImageSize"
        android:entries="@array/image_size_array"
        android:gravity="left" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvColorFilter"
        android:id="@+id/tvColorFilter"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:textSize="14sp"
        android:textColor="@color/dark_blue"
        android:layout_alignTop="@+id/spColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spColorFilter"
        android:layout_alignBaseline="@+id/spColorFilter"
        android:layout_toLeftOf="@+id/spImageType"
        android:layout_toStartOf="@+id/spImageType"
        android:typeface="monospace"
        android:gravity="left" />

    <Spinner
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:layout_toEndOf="@+id/tvColorFilter"
        android:layout_below="@+id/spImageSize"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:textSize="14sp"
        android:spinnerMode="dropdown"
        android:entries="@array/color_filter_array"
        android:gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvImageType"
        android:id="@+id/tvImageType"
        android:textColor="@color/dark_blue"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_alignTop="@+id/spImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spImageType"
        android:layout_alignBaseline="@+id/spImageType"
        android:layout_toLeftOf="@+id/spImageSize"
        android:layout_toStartOf="@+id/spImageSize"
        android:typeface="monospace"
        android:gravity="left"
        android:textSize="14sp" />

    <Spinner
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spColorFilter"
        android:layout_toRightOf="@+id/tvImageType"
        android:layout_toEndOf="@+id/tvImageType"
        android:paddingTop="15dp"
        android:textSize="14sp"
        android:spinnerMode="dropdown"
        android:entries="@array/image_type_array"
        android:gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSiteFilter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/tvImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:gravity="left"
        android:layout_alignParentBottom="false"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/filterEditText"
        android:id="@+id/etSiteFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spImageType"
        android:textColor="@color/material_blue_grey_800"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignBaseline="@+id/tvSiteFilter"
        android:textSize="14sp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingLeft="12dp"
        android:phoneNumber="false"
        android:capitalize="characters"
        android:gravity="left"
        android:singleLine="true"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_alignStart="@+id/spImageType"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/btSave"
        android:layout_below="@+id/spImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="20dp"
        android:typeface="monospace"
        android:layout_marginTop="60dp"
        android:background="@drawable/filter_button"
        android:textColor="#FFFFFF"
        android:paddingRight="7dp"
        android:paddingLeft="7dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/btCancel"
        android:layout_alignTop="@+id/btSave"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:typeface="monospace"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/filter_button"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />


</RelativeLayout>